K8s_yaml/k8s_yaml/zerone_demo_index/zerone_demo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerone-demo-index
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000
  selector:
    app: zerone-demo-index
