K8s_yaml/k8s_yaml/zerone_demo_index/zerone_demo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zodemo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /demo
        pathType: Prefix
        backend:
          service:
            name: zerone-demo-index
            port:
              number: 8000
